modification responsive fleches carousel 1024px 850px

--- a/css/styles.css
+++ b/css/styles.css
@@ -774,8 +774,8 @@ textarea:hover {
   }
   
   .slick-prev {
-    left: calc( 50% - 83px);
-    bottom: 30px;
+    left: calc( 50% - 63px);
+    bottom: 10px;
     height: 350px;
     z-index: 1;
   }
@@ -784,7 +784,7 @@ textarea:hover {
    /* font-size: 0px;
     position: absolute;*/
     right: calc( 50% - 50px);
-    bottom: 30px;
+    bottom: 10px;
     background-color: transparent;
     border: none;
     outline: none;
@@ -852,6 +852,14 @@ textarea:hover {
     width: 65%;
   }
 
+  .slick-prev {
+    left: calc( 50% - 80px);
+    bottom: 30px;
+  }
+  
+  .slick-next{
+    bottom: 30px ;
+  }
 }
 
 /**************850px***************************/
