--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@ section {
   padding: 0px 0 200px 0;
 }
 
+h1{
+  display: none;
+}
+
 h2 {
   color: var(--section-bg-white);
   font-size: 40px;
