--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,6 @@ h3 {
   color: var(--section-bg-blue);
   font-size: 20px;
   text-transform: uppercase;
-  padding:0 30px 0 30px;
 }
 
 p {
@@ -56,6 +55,7 @@ p {
   color: grey;
   text-align: justify;
 }
+
 
 
 /**********  barre de navigation*******/
@@ -281,19 +281,61 @@ p {
   /*width: 85%;*/
   left: 0;
   right: 0;
- 
 }
 
 .flip-card-back {
   background-color: var(--section-bg-white);
   color: var(--section-bg-white);
   transform: rotateY(180deg);
+  
   z-index: 1;
+}
+
+.langages {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 13px;
+  text-align: center;
+}
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 13px 25px;
+  list-style-type: none;
+  color: var(--color-font-grey)!important;
+  margin:0;
+}
+
+li >img{
+  width: 25px;
+  height: auto;
+  padding: 2px;
+}
+
+.logo-langages{
+  position: relative;
+  top: 0;
+}
+
+.logo-PHP{
+  width: 50px;  
+  height: auto;
+  border-radius: 15%;
 }
 
 .img_flip {
  width: 100%;
  height: 100%;
+}
+.cms >li{
+  display: inline-grid;
+  text-align: -webkit-center;
+}
+.soft >li{
+  display: inline-grid;
+  text-align: -webkit-center;
 }
 
 /**********fin flip********/
@@ -1286,6 +1328,11 @@ textarea:hover {
   .contact-tel, .contact-mail {
     font-size: 16px;
   } 
+
+  ul{
+    font-size: 10px;
+    margin: 10px;
+  }
 }
 
 /*********************360px  *****************/
